--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,10 @@
 {
   "name": "Flot",
   "version": "0.9.0-alpha",
-  "main": "jquery.flot.js",
+  "main": [
+    "src/jquery.flot.js",
+    "src/plugins/*"
+  ],
   "dependencies": {
     "jquery": ">= 1.2.6"
   },
